data/derived/comb/progs/unify/prog3627.ml.out
Characters 48-49:
  List.map (sepConcat f) (f l);;
                          ^
Error: This expression has type string
       This is not a function; it cannot be applied.
